# api/docs/swagger.json
@@ -1337,6 +1337,57 @@
                 }
             }
         },
+        "/sell": {
+            "post": {
+                "description": "sell",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sell"
+                ],
+                "summary": "sell",
+                "parameters": [
+                    {
+                        "description": "sell",
+                        "name": "sell",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateSale"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Sale"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/staff": {
             "get": {
                 "description": "Get staffs list",
@@ -2987,7 +3038,7 @@
             "type": "object",
             "properties": {
                 "barcode": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "category_id": {
                     "type": "string"
@@ -3383,9 +3434,6 @@
         "models.UpdateProduct": {
             "type": "object",
             "properties": {
-                "barcode": {
-                    "type": "integer"
-                },
                 "category_id": {
                     "type": "string"
                 },
@@ -3396,9 +3444,6 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
@@ -3486,9 +3531,6 @@
                     "type": "string"
                 },
                 "product_id": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
